# mailio

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README_zh.md  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  doxygen.conf  doxygen.conf.in  libmailio.pc.in  libtool  mailio.pc.in  readme.debian
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: doxy.cmake  doxygen.conf.in  mailio-config.cmake.in  req.cmake  src.cmake  vars.cmake
examples/: .directory  CMakeLists.txt  Makefile.am  Makefile.in  imap_fetch_one.cpp  imap_folders.cpp  imap_idle.cpp  imap_remove_msg.cpp  imap_search.cpp  imap_stat.cpp  imaps_fetch_one.cpp  imaps_sasl.cpp  imaps_search.cpp  imaps_stat.cpp  message.cpp  pop3_fetch_one.cpp  pop3_loop_fetch.cpp  pop3_remove_msg.cpp  pop3s_attachment.cpp  pop3s_fetch_one.cpp  smtp_attachment.cpp  smtp_multipart.cpp  smtp_simple_msg.cpp  smtp_utf8_qp_msg.cpp  smtps_attachment.cpp  smtps_multipart.cpp  smtps_simple_msg.cpp
include/: base64.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  dialog.hpp  imap.hpp  mailboxes.hpp  message.hpp  mime.hpp  pop3.hpp  q_codec.hpp  quoted_printable.hpp  smtp.hpp  version.hpp.in
include/libmailio/: base64.hpp  binary.hpp  dialog.hpp  message.hpp  mime.hpp  q_codec.hpp  quoted_printable.hpp
include/mailio/: base64.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  dialog.hpp  export.hpp  imap.hpp  mailboxes.hpp  message.hpp  mime.hpp  percent.hpp  pop3.hpp  q_codec.hpp  quoted_printable.hpp  smtp.hpp
src/: Makefile.am  Makefile.in  base64.cpp  binary.cpp  bit7.cpp  bit8.cpp  codec.cpp  dialog.cpp  imap.cpp  mailboxes.cpp  message.cpp  mime.cpp  percent.cpp  pop3.cpp  q_codec.cpp  quoted_printable.cpp  smtp.cpp
test/: CMakeLists.txt  cv.txt  test_dialog_stale_handler.cpp  test_message.cpp
tests/: CMakeLists.txt  test_message.cpp
